# k-notes

./: .dockerignore  .gitignore  ARCHITECTURE.MD  Cargo.toml  Dockerfile  Makefile  README.md  compose.yml
k-notes-frontend/: Dockerfile  capacitor.config.ts  i18n.ts  i18next.config.ts  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
k-notes-frontend/android/app/: build.gradle
k-notes-frontend/android/app/src/main/java/dev/gabrielkaszewski/knotes/: MainActivity.java
k-notes-frontend/android/app/src/main/res/values/: strings.xml
k-notes-frontend/public/: env-config.js
k-notes-frontend/public/locales/de/: translation.json
k-notes-frontend/public/locales/en/: translation.json
k-notes-frontend/public/locales/es/: translation.json
k-notes-frontend/public/locales/fr/: translation.json
k-notes-frontend/public/locales/pl/: translation.json
k-notes-frontend/src/: App.tsx  index.css  main.tsx
k-notes-frontend/src/components/: app-sidebar.tsx  auth-guard.tsx  bulk-actions-bar.tsx  bulk-selection-context.tsx  create-note-dialog.tsx  language-switcher.tsx  layout.tsx  note-card-skeleton.tsx  note-card.tsx  note-form.tsx  note-view-dialog.tsx  providers.tsx  related-notes.tsx  settings-dialog.tsx  version-history-dialog.tsx
k-notes-frontend/src/components/editor/: command-list.tsx  editor.tsx  extensions.ts  suggestions.tsx
k-notes-frontend/src/components/ui/: sidebar.tsx
k-notes-frontend/src/hooks/: use-api-url.ts  use-auth.ts  use-data-management.ts  use-keyboard-shortcuts.ts  use-mobile-status-bar.ts  use-notes.ts  use-related-notes.ts  useConfig.ts
k-notes-frontend/src/lib/: api.ts  constants.ts  db.ts  sync.ts
k-notes-frontend/src/pages/: dashboard.tsx  login.tsx  oidc-callback.tsx  privacy-policy.tsx  register.tsx  settings.tsx
k-notes-frontend/src/types/: resizable-panels-override.d.ts
migrations/: 20241223000000_initial_schema.sql  20241223000002_add_color_to_notes.sql  20251223030000_add_note_versions.sql  20251226000000_create_note_links.sql  20251231000000_nullable_title.sql
notes-api/: .env.example  Cargo.toml
notes-api/src/: auth.rs  config.rs  dto.rs  error.rs  extractors.rs  main.rs  nats_broker.rs  state.rs
notes-api/src/routes/: auth.rs  config.rs  import_export.rs  mod.rs  notes.rs  tags.rs
notes-domain/: Cargo.toml
notes-domain/src/: entities.rs  errors.rs  lib.rs  ports.rs  repositories.rs  services.rs  value_objects.rs
notes-infra/: Cargo.toml
notes-infra/src/: db.rs  factory.rs  lib.rs  link_repository.rs  note_repository.rs  tag_repository.rs  user_repository.rs
notes-infra/src/auth/: axum_login.rs  jwt.rs  mod.rs  oidc.rs
notes-infra/src/broker/: mod.rs  nats.rs
notes-infra/src/embeddings/: fastembed.rs  mod.rs
notes-infra/src/vector/: qdrant.rs
notes-worker/: Cargo.toml
notes-worker/src/: config.rs  main.rs
