[package]
name = "notes-worker"
version = "0.1.0"
edition = "2024"

[features]
default = ["sqlite", "smart-features"]
sqlite = ["notes-infra/sqlite", "sqlx/sqlite"]
# postgres = ["notes-infra/postgres", "sqlx/postgres"]
smart-features = ["notes-infra/smart-features", "notes-infra/broker-nats"]

[dependencies]
anyhow = "1.0.100"
notes-domain = { path = "../notes-domain" }
notes-infra = { path = "../notes-infra", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.146"
tokio = { version = "1.48.0", features = ["full"] }
chrono = { version = "0.4.42", features = ["serde"] }
sqlx = { version = "0.8.6", features = [
    "sqlite",
    "runtime-tokio",
    "chrono",
    "migrate",
] }
thiserror = "2.0.17"
bytes = "1.11.0"
futures-util = "0.3.31"
async-trait = "0.1.89"
tracing = "0.1"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
dotenvy = "0.15.7"
k-core = { git = "https://git.gabrielkaszewski.dev/GKaszewski/k-core", features = [
    "logging",
    "db-sqlx",
    "sqlite"
], version = "*"}